// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Returns both normal users and system users 1`] = `
[
  {
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "id": "[sanitized]",
    "name": "My health system integration",
    "type": "system",
  },
]
`;

exports[`Returns multiple users with honorifics 1`] = `
[
  {
    "fullHonorificName": "4th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "fullHonorificName": "5th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "fullHonorificName": "6th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "fullHonorificName": "7th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "fullHonorificName": "8th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": {
      "firstname": "John",
      "surname": "Doe",
    },
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
]
`;
